Initial portfolio commit

--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
             <div class="text-center">
                 <div data-aos="fade-up">
                     <h1 class="text-4xl lg:text-6xl mb-6 font-bold text-white">MD Bashir Ahmed</h1>
-                    <p class="text-xl lg:text-2xl text-white mb-8 max-w-3xl mx-auto" id="typify-text"></p>
+                    <p class="text-xl lg:text-2xl text-white mb-8 max-w-3xl mx-auto" id="typed-text"></p>
+                    <span class="typed-cursor"> </span>
                 </div>
                 <div class="flex flex-col sm:flex-row gap-4 justify-center" data-aos="fade-up" data-aos-delay="300">
                     <a href="#contact"
@@ -669,7 +670,7 @@
     <!-- JavaScript -->
     <!-- JavaScript Libraries -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="https://unpkg.com/typify.js@1.1.9/dist/typify.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     
     <!-- Custom JavaScript -->
     <script src="js/main.js"></script>
