--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -21,9 +21,9 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/styles.css">
-    
+
     <!-- AOS CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- typify -->
     <script src="https://unpkg.com/typify.js@1.1.9/dist/typify.min.js"></script>
@@ -103,12 +103,12 @@
         </div>
         <div class="container mx-auto px-4 sm:px-6 lg:px-8 relative">
             <div class="text-center">
-                <div data-aos="fade-up">
+                <div data-aos="zoom-in-right">
                     <h1 class="text-4xl lg:text-6xl mb-6 font-bold text-white">MD Bashir Ahmed</h1>
                     <p class="text-xl lg:text-2xl text-white mb-8 max-w-3xl mx-auto" id="typed-text"></p>
                     <span class="typed-cursor"> </span>
                 </div>
-                <div class="flex flex-col sm:flex-row gap-4 justify-center" data-aos="fade-up" data-aos-delay="300">
+                <div class="flex flex-col sm:flex-row gap-4 justify-center" data-aos="zoom-in-left" data-aos-delay="300">
                     <a href="#contact"
                         class="btn-primary px-8 py-3 text-white font-medium rounded-lg hover:bg-gray-800 transition-colors">
                         <i class="fas fa-envelope mr-2"></i>Get In Touch
@@ -125,9 +125,9 @@
     <!-- About Section -->
     <section id="about" class="py-16 bg-gray-50">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-            <h2 class="text-3xl lg:text-4xl text-center mb-12 font-bold" data-aos="fade-up">About Me</h2>
+            <h2 class="text-3xl lg:text-4xl text-center mb-12 font-bold" data-aos="zoom-in">About Me</h2>
             <div class="max-w-4xl mx-auto">
-                <div class="card p-6 mb-8 shadow-sm" data-aos="fade-right" data-aos-delay="100">
+                <div class="card p-6 mb-8 shadow-sm" data-aos="zoom-in-right" data-aos-delay="100">
                     <div class="flex items-center mb-4">
                         <i class="fas fa-user-tie text-2xl text-blue-600 mr-3"></i>
                         <h3 class="text-xl font-semibold">Professional Summary</h3>
@@ -139,7 +139,7 @@
                     </p>
                 </div>
 
-                <div class="card p-6 shadow-sm" data-aos="fade-left" data-aos-delay="200">
+                <div class="card p-6 shadow-sm" data-aos="zoom-in-left" data-aos-delay="200">
                     <div class="flex items-center mb-4">
                         <i class="fas fa-code text-2xl text-blue-600 mr-3"></i>
                         <h3 class="text-xl font-semibold">Key Skills</h3>
@@ -181,11 +181,11 @@
     <!-- Experience Section -->
     <section id="experience" class="py-16">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-            <h2 class="text-3xl lg:text-4xl text-center mb-12 font-bold" data-aos="fade-up">Experience</h2>
+            <h2 class="text-3xl lg:text-4xl text-center mb-12 font-bold" data-aos="zoom-in">Experience</h2>
             <div class="max-w-4xl mx-auto">
                 <div class="grid md:grid-cols-2 gap-6">
                     <!-- Current Position -->
-                    <div class="card p-6 shadow-sm" data-aos="fade-left">
+                    <div class="card p-6 shadow-sm" data-aos="zoom-in-right">
                         <div class="flex flex-col mb-4">
                             <h3 class="text-xl font-semibold flex items-center">
                                 <i class="fas fa-chart-line text-red-600 mr-2"></i>Officer - IT Operations
@@ -212,7 +212,7 @@
                     </div>
 
                     <!-- Internship Position -->
-                    <div class="card p-6 shadow-sm" data-aos="fade-right" data-aos-delay="300">
+                    <div class="card p-6 shadow-sm" data-aos="zoom-in-left" data-aos-delay="100">
                         <div class="flex flex-col mb-4">
                             <h3 class="text-xl font-semibold flex items-center">
                                 <i class="fas fa-laptop-code text-purple-600 mr-2"></i>Intern - ERP & Production
@@ -240,7 +240,7 @@
                     </div>
 
                     <!-- Assistant Admin Position -->
-                    <div class="card p-6 shadow-sm" data-aos="fade-right" data-aos-delay="100">
+                    <div class="card p-6 shadow-sm" data-aos="zoom-in-right" data-aos-delay="200">
                         <div class="flex flex-col mb-4">
                             <h3 class="text-xl font-semibold flex items-center">
                                 <i class="fas fa-building text-blue-600 mr-2"></i>Assistant Admin
@@ -263,7 +263,7 @@
                     </div>
 
                     <!-- Teaching Position -->
-                    <div class="card p-6 shadow-sm" data-aos="fade-left" data-aos-delay="200">
+                    <div class="card p-6 shadow-sm" data-aos="zoom-in-left" data-aos-delay="300">
                         <div class="flex flex-col mb-4">
                             <h3 class="text-xl font-semibold flex items-center">
                                 <i class="fas fa-chalkboard-teacher text-green-600 mr-2"></i>Assistant ICT Teacher
@@ -296,9 +296,9 @@
     <!-- Projects Section -->
     <section id="projects" class="py-16 bg-gray-50">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-            <h2 class="text-3xl lg:text-4xl text-center mb-12 font-bold" data-aos="fade-up">Projects</h2>
+            <h2 class="text-3xl lg:text-4xl text-center mb-12 font-bold" data-aos="zoom-in">Projects</h2>
             <div class="max-w-4xl mx-auto grid md:grid-cols-2 gap-6">
-                <div class="card p-6 shadow-sm" data-aos="fade-right" data-aos-delay="100">
+                <div class="card p-6 shadow-sm" data-aos="zoom-in-right" data-aos-delay="100">
                     <div class="flex items-center mb-3">
                         <i class="fas fa-chart-line text-2xl text-blue-600 mr-3"></i>
                         <h3 class="text-xl font-semibold">Student Data Analytics Dashboard</h3>
@@ -314,7 +314,7 @@
                     </div>
                 </div>
 
-                <div class="card p-6 shadow-sm" data-aos="fade-left" data-aos-delay="200">
+                <div class="card p-6 shadow-sm" data-aos="zoom-in-left" data-aos-delay="200">
                     <div class="flex items-center mb-3">
                         <i class="fas fa-users text-2xl text-green-600 mr-3"></i>
                         <h3 class="text-xl font-semibold">HR Data Analysis System</h3>
@@ -330,7 +330,7 @@
                     </div>
                 </div>
 
-                <div class="card p-6 shadow-sm" data-aos="fade-right" data-aos-delay="300">
+                <div class="card p-6 shadow-sm" data-aos="zoom-in-right" data-aos-delay="300">
                     <div class="flex items-center mb-3">
                         <i class="fas fa-robot text-2xl text-purple-600 mr-3"></i>
                         <h3 class="text-xl font-semibold">Process Automation Scripts</h3>
@@ -346,7 +346,7 @@
                     </div>
                 </div>
 
-                <div class="card p-6 shadow-sm" data-aos="fade-left" data-aos-delay="400">
+                <div class="card p-6 shadow-sm" data-aos="zoom-in-left" data-aos-delay="400">
                     <div class="flex items-center mb-3">
                         <i class="fas fa-database text-2xl text-red-600 mr-3"></i>
                         <h3 class="text-xl font-semibold">Database Management Solutions</h3>
@@ -370,12 +370,12 @@
     <!-- Education & Certifications -->
     <section class="py-16 bg-gray-50">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-            <h2 class="text-3xl lg:text-4xl text-center mb-12 font-bold" data-aos="fade-up">Education &amp;
+            <h2 class="text-3xl lg:text-4xl text-center mb-12 font-bold" data-aos="zoom-in">Education &amp;
                 Certifications</h2>
             <div class="max-w-4xl mx-auto">
                 <div class="grid lg:grid-cols-2 gap-8">
                     <!-- Education -->
-                    <div class="card p-6 shadow-sm" data-aos="fade-right" data-aos-delay="100">
+                    <div class="card p-6 shadow-sm" data-aos="zoom-in-right" data-aos-delay="100">
                         <div class="flex items-center mb-4">
                             <i class="fas fa-graduation-cap text-2xl text-blue-600 mr-3"></i>
                             <h3 class="text-xl font-semibold">Education</h3>
@@ -399,7 +399,7 @@
                     </div>
 
                     <!-- Certifications -->
-                    <div class="card p-6 shadow-sm" data-aos="fade-left" data-aos-delay="200">
+                    <div class="card p-6 shadow-sm" data-aos="zoom-in-left" data-aos-delay="200">
                         <div class="flex items-center mb-4">
                             <i class="fas fa-certificate text-2xl text-green-600 mr-3"></i>
                             <h3 class="text-xl font-semibold">Certifications (2024)</h3>
@@ -431,10 +431,10 @@
     <!-- Activities & Volunteering -->
     <section class="py-16">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-            <h2 class="text-3xl lg:text-4xl text-center mb-12 font-bold" data-aos="fade-up">Activities &amp;
+            <h2 class="text-3xl lg:text-4xl text-center mb-12 font-bold" data-aos="zoom-in">Activities &amp;
                 Volunteering</h2>
             <div class="max-w-4xl mx-auto grid md:grid-cols-3 gap-6">
-                <div class="card p-6 shadow-sm" data-aos="fade-right" data-aos-delay="100">
+                <div class="card p-6 shadow-sm" data-aos="zoom-in-right" data-aos-delay="100">
                     <div class="flex items-center mb-3">
                         <i class="fas fa-user-tie text-2xl text-blue-600 mr-3"></i>
                         <h3 class="text-lg font-semibold">Executive Member</h3>
@@ -446,7 +446,7 @@
                     </p>
                 </div>
 
-                <div class="card p-6 shadow-sm" data-aos="fade-up" data-aos-delay="200">
+                <div class="card p-6 shadow-sm" data-aos="zoom-in" data-aos-delay="200">
                     <div class="flex items-center mb-3">
                         <i class="fas fa-users text-2xl text-green-600 mr-3"></i>
                         <h3 class="text-lg font-semibold">Member</h3>
@@ -457,7 +457,7 @@
                     </p>
                 </div>
 
-                <div class="card p-6 shadow-sm" data-aos="fade-left" data-aos-delay="300">
+                <div class="card p-6 shadow-sm" data-aos="zoom-in-left" data-aos-delay="300">
                     <div class="flex items-center mb-3">
                         <i class="fas fa-heart text-2xl text-red-600 mr-3"></i>
                         <h3 class="text-lg font-semibold">Volunteer</h3>
@@ -475,11 +475,11 @@
     <!-- Recommendations Section -->
     <section class="py-16">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-            <h2 class="text-3xl lg:text-4xl text-center mb-12 font-bold" data-aos="fade-up">Recommendations</h2>
+            <h2 class="text-3xl lg:text-4xl text-center mb-12 font-bold" data-aos="zoom-in">Recommendations</h2>
             <div class="max-w-4xl mx-auto">
                 <div class="grid md:grid-cols-2 gap-6">
                     <!-- Recommendation 1 -->
-                    <div class="card p-6 shadow-sm" data-aos="fade-right" data-aos-delay="100">
+                    <div class="card p-6 shadow-sm" data-aos="zoom-in-right" data-aos-delay="100">
                         <div class="flex items-start space-x-4">
                             <div class="flex-shrink-0">
                                 <i class="fas fa-quote-left text-3xl text-blue-600"></i>
@@ -498,7 +498,7 @@
                     </div>
 
                     <!-- Recommendation 2 -->
-                    <div class="card p-6 shadow-sm" data-aos="fade-left" data-aos-delay="200">
+                    <div class="card p-6 shadow-sm" data-aos="zoom-in-left" data-aos-delay="200">
                         <div class="flex items-start space-x-4">
                             <div class="flex-shrink-0">
                                 <i class="fas fa-quote-left text-3xl text-blue-600"></i>
@@ -523,10 +523,10 @@
     <!-- Contact Section -->
     <section id="contact" class="py-16 bg-gray-50">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-            <h2 class="text-3xl lg:text-4xl text-center mb-12 font-bold" data-aos="fade-up">Get In Touch</h2>
+            <h2 class="text-3xl lg:text-4xl text-center mb-12 font-bold" data-aos="zoom-in">Get In Touch</h2>
             <div class="max-w-4xl mx-auto grid lg:grid-cols-2 gap-8">
                 <!-- Contact Information -->
-                <div class="card p-6 shadow-sm" data-aos="fade-right" data-aos-delay="100">
+                <div class="card p-6 shadow-sm" data-aos="zoom-in-right" data-aos-delay="100">
                     <h3 class="text-xl font-semibold text-center mb-2">Contact Information</h3>
                     <p class="text-gray-600 text-center mb-6">
                         Let's connect and discuss opportunities
@@ -608,7 +608,7 @@
                 </div>
 
                 <!-- Contact Form -->
-                <div class="card p-6 shadow-sm" data-aos="fade-left" data-aos-delay="200">
+                <div class="card p-6 shadow-sm" data-aos="zoom-in-left" data-aos-delay="200">
                     <h3 class="text-xl font-semibold mb-4">Send Me a Message</h3>
                     <form id="contact-form" class="space-y-4">
                         <div>
@@ -667,13 +667,24 @@
         </div>
     </footer>
 
+    <!-- Scroll to Top Button -->
+    <button id="scrollTopBtn" title="Go to top" class="scroll-top-btn">
+        <i class="fas fa-arrow-up"></i>
+    </button>
+
     <!-- JavaScript -->
     <!-- JavaScript Libraries -->
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
     <!-- Custom JavaScript -->
     <script src="js/main.js"></script>
-</body>
 
+    <script>
+        AOS.init({
+            delay: 500,
+            duration: 1000,
+        });
+    </script>
+</body>
 </html>
