add Mobile Navigation animation

--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
     </header>
 
     <!-- Hero Section -->
-    <section id="home" class="py-16 lg:py-24 relative overflow-hidden">
+    <section id="home" class="py-16 h-[50vh] lg:h-[100vh] relative overflow-hidden">
         <div class="absolute inset-0">
             <img src="heroBG/vecteezy_a-minimal-contemporary-interior-featuring-a-plant-in-a_57338552.jpg"
                 alt="Hero Background" class="w-full h-full object-cover">
         </div>
-        <div class="container mx-auto px-4 sm:px-6 lg:px-8 relative">
+        <div class="container mx-auto px-4 sm:px-6 lg:px-8 relative flex items-center justify-center h-full">
             <div class="text-center">
                 <div data-aos="zoom-in-right">
                     <h1 class="text-4xl lg:text-6xl mb-6 font-bold text-white">MD Bashir Ahmed</h1>
@@ -109,7 +109,8 @@
                     <span class="typed-cursor"> </span>
                 </div>
                 <div class="flex flex-col sm:flex-row gap-4 justify-center" data-aos="zoom-in-left" data-aos-delay="300">
-                    <a href="#contact"
+                    <a href="https://docs.google.com/document/d/1UVzJH8TB3A4bp8JS7foTl2y2dy-_oqfh/export?format=pdf"
+                        download="MD Bashir Ahmed - Resume.pdf"
                         class="btn-primary px-8 py-3 text-white font-medium rounded-lg hover:bg-gray-800 transition-colors">
                         <i class="fas fa-envelope mr-2"></i>Get In Touch
                     </a>
