--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		</div>
 
 		<!-- Progress Bar -->
-		<div class="progress-bar" id="progress-bar"></div>
+<div class="progress-bar" id="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0"></div>
 
 		<!-- Header/Navigation -->
 		<header
@@ -98,9 +98,12 @@
 					</div>
 
 					<!-- Mobile Menu Button -->
-					<button
+<button
 						id="mobile-menu-btn"
 						class="md:hidden p-2 rounded-md hover:bg-gray-100 transition-colors"
+						aria-controls="mobile-menu"
+						aria-expanded="false"
+						aria-label="Toggle navigation menu"
 					>
 						<i id="menu-icon" class="fas fa-bars text-xl"></i>
 						<i id="close-icon" class="fas fa-times text-xl hidden"></i>
@@ -108,7 +111,7 @@
 				</div>
 
 				<!-- Mobile Navigation -->
-				<div id="mobile-menu" class="mobile-menu md:hidden py-4 border-t">
+<div id="mobile-menu" class="mobile-menu md:hidden py-4 border-t" aria-hidden="true">
 					<nav class="flex flex-col space-y-2">
 						<a
 							href="#home"
@@ -178,7 +181,7 @@
 							MD Bashir Ahmed
 						</h1>
 						<p
-							class="text-xl lg:text-2xl text-white mb-8 max-w-3xl mx-auto"
+							class="text-xl lg:text-2xl text-white mb-8 max-w-3xl mx-auto typed-text-container"
 							id="typed-text"
 						></p>
 					</div>
@@ -442,35 +445,7 @@
 							</ul>
 						</div>
 
-						<!-- Teaching Position -->
-						<div class="card p-6 shadow-sm">
-							<div class="flex flex-col mb-4">
-								<h3 class="text-xl font-semibold flex items-center">
-									<i class="fas fa-chalkboard-teacher text-green-600 mr-2"></i
-									>Assistant ICT Teacher
-								</h3>
-								<p class="text-lg text-gray-600">
-									Amin Model Town School and College
-								</p>
-								<div class="flex items-center text-sm text-gray-500 mt-1">
-									<i class="fas fa-map-marker-alt mr-1"></i>
-									<span>Savar</span>
-									<span class="mx-2">|</span>
-									<i class="fas fa-calendar-alt mr-1"></i>
-									<span>Jan 2024 – Mar 2024</span>
-								</div>
-							</div>
-							<ul class="space-y-2 text-gray-600">
-								<li>
-									<i class="fas fa-check text-green-500 mr-2"></i>Taught Class
-									11 ICT curriculum and basic computer skills
-								</li>
-								<li>
-									<i class="fas fa-check text-green-500 mr-2"></i>Conducted
-									assessments and supported extracurricular tech activities
-								</li>
-							</ul>
-						</div>
+						
 					</div>
 				</div>
 			</div>
