restore previous design

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 		<!-- Hero Section -->
 		<section
 			id="home"
-			class="py-16 h-[50vh] lg:h-[100vh] relative overflow-hidden bg-gray-900"
+			class="py-16 lg:py-24 h-[50vh] lg:h-[100vh] relative overflow-hidden bg-gray-900"
 		>
 			<div id="particles-js" class="absolute inset-0"></div>
 			<div
@@ -180,10 +180,20 @@
 						<h1 class="text-4xl lg:text-6xl mb-6 font-bold text-white">
 							MD Bashir Ahmed
 						</h1>
+						<p class="text-white/80 mb-2">Dhanmondi, Jigatola, Dhaka, Bangladesh</p>
+						<div class="flex gap-4 justify-center text-white/90 text-sm mb-6">
+							<a href="tel:+8801793761605" class="hover:underline"><i class="fas fa-phone mr-1"></i> +880 1793 761605</a>
+							<span>|</span>
+							<a href="mailto:babashir8811@gmail.com" class="hover:underline"><i class="fas fa-envelope mr-1"></i> babashir8811@gmail.com</a>
+							<span>|</span>
+							<a href="https://www.linkedin.com/in/bashir-6923131b0" target="_blank" rel="noopener" class="hover:underline"><i class="fab fa-linkedin mr-1"></i> LinkedIn</a>
+							<span>|</span>
+							<a href="https://github.com/bashir-CSE" target="_blank" rel="noopener" class="hover:underline"><i class="fab fa-github mr-1"></i> GitHub</a>
+						</div>
 						<p
 							class="text-xl lg:text-2xl text-white mb-8 max-w-3xl mx-auto typed-text-container"
 							id="typed-text"
-						></p>
+						><span id="typed5"></span></p>
 					</div>
 					<div class="flex flex-col sm:flex-row gap-4 justify-center">
 						<a
@@ -192,12 +202,6 @@
 							class="btn-primary px-8 py-3 text-white font-medium rounded-lg hover:bg-gray-800 transition-colors flex items-center justify-center"
 						>
 							<i class="fas fa-download mr-2"></i>Download Resume
-						</a>
-						<a
-							href="#contact"
-							class="btn-outline px-8 py-3 font-medium rounded-lg hover:bg-gray-50 transition-colors flex items-center justify-center"
-						>
-							<i class="fas fa-paper-plane mr-2"></i>Contact Me
 						</a>
 					</div>
 				</div>
@@ -217,11 +221,7 @@
 							<h3 class="text-xl font-semibold">Professional Summary</h3>
 						</div>
 						<p class="text-lg leading-relaxed text-gray-700">
-							Detail-oriented IT graduate with expertise in data analysis,
-							reporting, and system support. Proficient in Power BI, Excel,
-							Power Query, and Google Apps Script for actionable insights and
-							automation. Skilled in database management, IT operations, and
-							documentation.
+							Detail-oriented IT professional specializing in analytics, reporting, and system support. I create actionable insights with Power BI, Power Query, and Advanced Excel, and automate workflows using Google Apps Script. I manage SDM databases, deliver operational dashboards, and provide first-level IT support and user training across Microsoft 365 and Google Workspace.
 						</p>
 					</div>
 
@@ -231,50 +231,35 @@
 							<h3 class="text-xl font-semibold">Key Skills</h3>
 						</div>
 						<div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
-							<span
-								class="badge px-3 py-2 text-sm font-medium text-center rounded-md"
-							>
+							<span class="badge px-3 py-2 text-sm font-medium text-center rounded-md">
 								<i class="fas fa-chart-bar mr-1"></i>Power BI
 							</span>
-							<span
-								class="badge px-3 py-2 text-sm font-medium text-center rounded-md"
-							>
+							<span class="badge px-3 py-2 text-sm font-medium text-center rounded-md">
 								<i class="fas fa-file-excel mr-1"></i>Advanced Excel
 							</span>
-							<span
-								class="badge px-3 py-2 text-sm font-medium text-center rounded-md"
-							>
+							<span class="badge px-3 py-2 text-sm font-medium text-center rounded-md">
 								<i class="fas fa-search mr-1"></i>Power Query
 							</span>
-							<span
-								class="badge px-3 py-2 text-sm font-medium text-center rounded-md"
-							>
+							<span class="badge px-3 py-2 text-sm font-medium text-center rounded-md">
 								<i class="fab fa-google mr-1"></i>Google Apps Script
 							</span>
-							<span
-								class="badge px-3 py-2 text-sm font-medium text-center rounded-md"
-							>
-								<i class="fab fa-python mr-1"></i>Python
+							<span class="badge px-3 py-2 text-sm font-medium text-center rounded-md">
+								<i class="fab fa-python mr-1"></i>Python (Data Analysis)
 							</span>
-							<span
-								class="badge px-3 py-2 text-sm font-medium text-center rounded-md"
-							>
+							<span class="badge px-3 py-2 text-sm font-medium text-center rounded-md">
 								<i class="fas fa-database mr-1"></i>SQL
 							</span>
-							<span
-								class="badge px-3 py-2 text-sm font-medium text-center rounded-md"
-							>
+							<span class="badge px-3 py-2 text-sm font-medium text-center rounded-md">
 								<i class="fas fa-server mr-1"></i>Oracle ERP
 							</span>
-							<span
-								class="badge px-3 py-2 text-sm font-medium text-center rounded-md"
-							>
+							<span class="badge px-3 py-2 text-sm font-medium text-center rounded-md">
 								<i class="fab fa-microsoft mr-1"></i>Microsoft 365
 							</span>
-							<span
-								class="badge px-3 py-2 text-sm font-medium text-center rounded-md"
-							>
+							<span class="badge px-3 py-2 text-sm font-medium text-center rounded-md">
 								<i class="fab fa-google mr-1"></i>Google Workspace
+							</span>
+							<span class="badge px-3 py-2 text-sm font-medium text-center rounded-md">
+								<i class="fas fa-network-wired mr-1"></i>IT Support & Troubleshooting
 							</span>
 						</div>
 					</div>
@@ -349,8 +334,7 @@
 						<div class="card p-6 shadow-sm">
 							<div class="flex flex-col mb-4">
 								<h3 class="text-xl font-semibold flex items-center">
-									<i class="fas fa-chart-line text-red-600 mr-2"></i>Officer -
-									IT Operations
+									<i class="fas fa-chart-line text-red-600 mr-2"></i>Officer — IT Operations
 								</h3>
 								<p class="text-lg text-gray-600">Aloha Bangladesh</p>
 								<div class="flex items-center text-sm text-gray-500 mt-1">
@@ -358,25 +342,21 @@
 									<span>Dhaka</span>
 									<span class="mx-2">|</span>
 									<i class="fas fa-calendar-alt mr-1"></i>
-									<span>Nov 2023 - Present</span>
+									<span>Nov 2024 - Present</span>
 								</div>
 							</div>
 							<ul class="space-y-2 text-gray-600">
 								<li>
-									<i class="fas fa-check text-green-500 mr-2"></i>Managed
-									student database systems
+									<i class="fas fa-check text-green-500 mr-2"></i>Manage and monitor Student Database Management (SDM) systems to ensure data accuracy and accessibility
 								</li>
 								<li>
-									<i class="fas fa-check text-green-500 mr-2"></i>Created
-									comprehensive Power BI dashboards
+									<i class="fas fa-check text-green-500 mr-2"></i>Build dashboards and reports using Power BI, Power Query, and Advanced Excel for operational insights
 								</li>
 								<li>
-									<i class="fas fa-check text-green-500 mr-2"></i>Automated
-									processes using Google Apps Script
+									<i class="fas fa-check text-green-500 mr-2"></i>Automate attendance and requisition processes with Google Apps Script to improve efficiency
 								</li>
 								<li>
-									<i class="fas fa-check text-green-500 mr-2"></i>Provided
-									technical IT support and training
+									<i class="fas fa-check text-green-500 mr-2"></i>Provide first-level IT support and train staff on Microsoft 365 and Google Workspace; develop system documentation
 								</li>
 							</ul>
 						</div>
@@ -385,8 +365,7 @@
 						<div class="card p-6 shadow-sm">
 							<div class="flex flex-col mb-4">
 								<h3 class="text-xl font-semibold flex items-center">
-									<i class="fas fa-laptop-code text-purple-600 mr-2"></i>Intern
-									- ERP & Production Planning
+									<i class="fas fa-laptop-code text-purple-600 mr-2"></i>Intern — ERP & Production Planning
 								</h3>
 								<p class="text-lg text-gray-600">DB Trims, DBL Group</p>
 								<div class="flex items-center text-sm text-gray-500 mt-1">
@@ -399,20 +378,16 @@
 							</div>
 							<ul class="space-y-2 text-gray-600">
 								<li>
-									<i class="fas fa-check text-green-500 mr-2"></i>Supported
-									Oracle ERP data management and maintenance
+									<i class="fas fa-check text-green-500 mr-2"></i>Supported Oracle ERP data management, ensuring accurate production tracking and reporting
 								</li>
 								<li>
-									<i class="fas fa-check text-green-500 mr-2"></i>Prepared
-									analytical reports using Excel and Power Query
+									<i class="fas fa-check text-green-500 mr-2"></i>Prepared analytical reports using Excel and Power Query to support decision-making
 								</li>
 								<li>
-									<i class="fas fa-check text-green-500 mr-2"></i>Optimized
-									business processes through data analysis
+									<i class="fas fa-check text-green-500 mr-2"></i>Resolved system issues and documented workflows for operational improvements
 								</li>
 								<li>
-									<i class="fas fa-check text-green-500 mr-2"></i>Collaborated
-									with cross-functional teams on production planning
+									<i class="fas fa-check text-green-500 mr-2"></i>Validated master data and contributed to process optimization within ERP systems
 								</li>
 							</ul>
 						</div>
@@ -421,8 +396,7 @@
 						<div class="card p-6 shadow-sm">
 							<div class="flex flex-col mb-4">
 								<h3 class="text-xl font-semibold flex items-center">
-									<i class="fas fa-building text-blue-600 mr-2"></i>Assistant
-									Admin
+									<i class="fas fa-building text-blue-600 mr-2"></i>Assistant Admin
 								</h3>
 								<p class="text-lg text-gray-600">Corus Knit Composite Ltd.</p>
 								<div class="flex items-center text-sm text-gray-500 mt-1">
@@ -435,12 +409,10 @@
 							</div>
 							<ul class="space-y-2 text-gray-600">
 								<li>
-									<i class="fas fa-check text-green-500 mr-2"></i>Assisted HR
-									and admin functions using Excel and digital tools
+									<i class="fas fa-check text-green-500 mr-2"></i>Assisted HR and admin functions using Excel and digital tools
 								</li>
 								<li>
-									<i class="fas fa-check text-green-500 mr-2"></i>Supported
-									shift planning and document control
+									<i class="fas fa-check text-green-500 mr-2"></i>Supported shift planning and document control
 								</li>
 							</ul>
 						</div>
@@ -460,95 +432,46 @@
 				<div class="max-w-4xl mx-auto grid md:grid-cols-2 gap-6">
 					<div class="card p-6 shadow-sm">
 						<div class="flex items-center mb-3">
-							<i class="fas fa-chart-line text-2xl text-blue-600 mr-3"></i>
-							<h3 class="text-xl font-semibold">
-								Student Data Analytics Dashboard
-							</h3>
+							<i class="fas fa-piggy-bank text-2xl text-blue-600 mr-3"></i>
+							<h3 class="text-xl font-semibold">Student Fee Manager — Chrome Extension</h3>
 						</div>
-						<p class="text-gray-600 mb-4">Power BI • Aloha Bangladesh</p>
+						<p class="text-gray-600 mb-4">JavaScript • Chrome APIs • Automation</p>
 						<p class="text-gray-700 mb-4">
-							Comprehensive Power BI dashboard analyzing student enrollment
-							trends, performance metrics, and demographic insights for
-							strategic decision-making.
+							A lightweight Chrome extension that automates student fee management workflows, reducing manual work and processing time by up to 95%.
 						</p>
+						<ul class="list-disc list-inside text-sm text-gray-600 mb-4">
+							<li>Automated fee calculation, reminders, and update flows</li>
+							<li>Integrated with existing web portals using content scripts</li>
+							<li>Reduced repetitive data entry and improved accuracy</li>
+						</ul>
 						<div class="flex items-center text-sm">
-							<span
-								class="badge-outline px-2 py-1 text-xs font-medium rounded mr-2"
-								>Power BI</span
-							>
-							<span class="badge-outline px-2 py-1 text-xs font-medium rounded"
-								>Data Analysis</span
-							>
+							<span class="badge-outline px-2 py-1 text-xs font-medium rounded mr-2">Chrome Extension</span>
+							<span class="badge-outline px-2 py-1 text-xs font-medium rounded mr-2">Automation</span>
+							<span class="badge-outline px-2 py-1 text-xs font-medium rounded">JavaScript</span>
 						</div>
 					</div>
 
 					<div class="card p-6 shadow-sm">
 						<div class="flex items-center mb-3">
-							<i class="fas fa-users text-2xl text-green-600 mr-3"></i>
-							<h3 class="text-xl font-semibold">HR Data Analysis System</h3>
+							<i class="fas fa-clipboard-check text-2xl text-green-600 mr-3"></i>
+							<h3 class="text-xl font-semibold">Automated Requisition & Attendance System</h3>
 						</div>
-						<p class="text-gray-600 mb-4">Excel • Power Query • DBL Group</p>
+						<p class="text-gray-600 mb-4">Web App • Google Apps Script • Sheets</p>
 						<p class="text-gray-700 mb-4">
-							Advanced Excel-based HR analytics solution using Power Query for
-							automated data processing and comprehensive reporting during ERP
-							internship.
+							Web-based solution to streamline classroom supply requisitions and employee attendance tracking, significantly enhancing operational efficiency and reducing manual workload.
 						</p>
+						<ul class="list-disc list-inside text-sm text-gray-600 mb-4">
+							<li>Automated end-to-end requisition approval and tracking</li>
+							<li>Attendance logging with validation and centralized reporting</li>
+							<li>Reduced manual processes and improved data reliability</li>
+						</ul>
 						<div class="flex items-center text-sm">
-							<span
-								class="badge-outline px-2 py-1 text-xs font-medium rounded mr-2"
-								>Excel</span
-							>
-							<span class="badge-outline px-2 py-1 text-xs font-medium rounded"
-								>Power Query</span
-							>
+							<span class="badge-outline px-2 py-1 text-xs font-medium rounded mr-2">Apps Script</span>
+							<span class="badge-outline px-2 py-1 text-xs font-medium rounded mr-2">Google Sheets</span>
+							<span class="badge-outline px-2 py-1 text-xs font-medium rounded">Web Automation</span>
 						</div>
 					</div>
 
-					<div class="card p-6 shadow-sm">
-						<div class="flex items-center mb-3">
-							<i class="fas fa-robot text-2xl text-purple-600 mr-3"></i>
-							<h3 class="text-xl font-semibold">Process Automation Scripts</h3>
-						</div>
-						<p class="text-gray-600 mb-4">Google Apps Script • Automation</p>
-						<p class="text-gray-700 mb-4">
-							Automated data extraction and validation processes using Google
-							Apps Script, reducing manual work by 60% and improving data
-							accuracy.
-						</p>
-						<div class="flex items-center text-sm">
-							<span
-								class="badge-outline px-2 py-1 text-xs font-medium rounded mr-2"
-								>Google Apps Script</span
-							>
-							<span class="badge-outline px-2 py-1 text-xs font-medium rounded"
-								>Automation</span
-							>
-						</div>
-					</div>
-
-					<div class="card p-6 shadow-sm">
-						<div class="flex items-center mb-3">
-							<i class="fas fa-database text-2xl text-red-600 mr-3"></i>
-							<h3 class="text-xl font-semibold">
-								Database Management Solutions
-							</h3>
-						</div>
-						<p class="text-gray-600 mb-4">SQL • Oracle ERP • Database Design</p>
-						<p class="text-gray-700 mb-4">
-							Developed and maintained database solutions for student
-							information systems, ensuring data integrity and optimized query
-							performance.
-						</p>
-						<div class="flex items-center text-sm">
-							<span
-								class="badge-outline px-2 py-1 text-xs font-medium rounded mr-2"
-								>SQL</span
-							>
-							<span class="badge-outline px-2 py-1 text-xs font-medium rounded"
-								>Database Design</span
-							>
-						</div>
-					</div>
 				</div>
 			</div>
 		</section>
@@ -636,54 +559,44 @@
 					Currently Learning
 				</h2>
 				<p class="text-center text-lg text-gray-600 max-w-2xl mx-auto mb-10">
-					I'm always eager to expand my skillset and am continuously exploring
-					the AI world. Here are some of the technologies and concepts I'm
-					currently focused on.
+					Always expanding my skillset across analytics, automation, and AI to deliver more value in data-driven roles.
 				</p>
-				<div
-					class="max-w-4xl mx-auto grid grid-cols-2 md:grid-cols-3 gap-6 text-center"
-				>
-					<!-- Learning Item 1 -->
-					<div class="card p-6 shadow-sm">
-						<div class="text-4xl text-blue-600 mb-3">
-							<i class="fas fa-brain"></i>
-						</div>
-						<h3 class="text-lg font-semibold">AIoT</h3>
-					</div>
-					<!-- Learning Item 2 -->
+				<div class="max-w-4xl mx-auto grid grid-cols-2 md:grid-cols-3 gap-6 text-center">
 					<div class="card p-6 shadow-sm">
 						<div class="text-4xl text-blue-600 mb-3">
 							<i class="fab fa-python"></i>
 						</div>
 						<h3 class="text-lg font-semibold">Advanced Python</h3>
 					</div>
-					<!-- Learning Item 3 -->
 					<div class="card p-6 shadow-sm">
 						<div class="text-4xl text-blue-600 mb-3">
 							<i class="fas fa-robot"></i>
 						</div>
-						<h3 class="text-lg font-semibold">Machine Learning</h3>
+						<h3 class="text-lg font-semibold">Machine Learning Basics</h3>
 					</div>
-					<!-- Learning Item 4 -->
+					<div class="card p-6 shadow-sm">
+						<div class="text-4xl text-blue-600 mb-3">
+							<i class="fas fa-database"></i>
+						</div>
+						<h3 class="text-lg font-semibold">SQL Optimization</h3>
+					</div>
 					<div class="card p-6 shadow-sm">
 						<div class="text-4xl text-blue-600 mb-3">
 							<i class="fas fa-sitemap"></i>
 						</div>
 						<h3 class="text-lg font-semibold">Data Structures & Algorithms</h3>
 					</div>
-					<!-- Learning Item 5 -->
 					<div class="card p-6 shadow-sm">
 						<div class="text-4xl text-blue-600 mb-3">
 							<i class="fas fa-language"></i>
 						</div>
 						<h3 class="text-lg font-semibold">English Proficiency</h3>
 					</div>
-					<!-- Learning Item 6 -->
 					<div class="card p-6 shadow-sm">
 						<div class="text-4xl text-blue-600 mb-3">
-							<i class="fas fa-search"></i>
+							<i class="fas fa-bolt"></i>
 						</div>
-						<h3 class="text-lg font-semibold">AI Exploration</h3>
+						<h3 class="text-lg font-semibold">Automation Best Practices</h3>
 					</div>
 				</div>
 			</div>
@@ -1024,10 +937,11 @@
 		<!-- JavaScript -->
 		<!-- JavaScript Libraries -->
 		<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-		<script src="https://unpkg.com/typeit@8.8.3/dist/index.umd.js"></script>
+		<!-- Typed.js (replaces TypeIt) -->
+		<script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 		<script src="https://unpkg.com/scrollreveal"></script>
 		<script src="https://unpkg.com/headroom.js"></script>
-
+	
 		<!-- Custom JavaScript -->
 		<script src="js/main.js"></script>
 	</body>
